# Roshangaran

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.0541559  Resource.qrc  Resources.qrc  db1  db2  main.cpp  resources.qrc  roshangaran.pro  version.h.in
Backend/: Backend.cpp  backend.cpp  backend.h
Lib/models/: BasisModel.h  BranchModel.h  StepModel.h
UI/: Main.qml  Template.qml
UI/base/: Base.qml  BaseWidget.qml
UI/basis/: Basis.js  Basis.qml  BasisDelete.qml  BasisInsert.qml  BasisUpdate.qml  BasisWidget.qml
UI/branch/: BranchDelete.qml  BranchInsert.qml  BranchWidget.qml  Branches.js  Branches.qml  UpdateBranch.qml
UI/home/: Home.qml  HomePage.qml  HomeWindow.qml  MenubarModule.qml  ToolbarModule.qml
UI/login/: InitialLogin.qml  Login.qml  LoginForm.qml  LoginWindow.qml  NewRelease.qml  NoConnection.qml  OnMaintenance.qml
UI/step/: Step.js  StepDelete.qml  StepInsert.qml  StepUpdate.qml  StepWidget.qml  Steps.qml
UI/studyPeriod/: StudyPeriod.js  StudyPeriodDelete.qml  StudyPeriodInsert.qml  StudyPeriodUpdate.qml  StudyPeriodWidget.qml  StudyPeriods.qml
UI/user/: BaseDialog.qml  ListUser.js  ListUser.qml  NewUser.qml  NewUser0.qml  Template.qml  User.js  User.qml  UserDelete.qml  UserModify.qml  UsersListWidget.qml  newUserJS.js
qmls/login/: Login.qml
